--- a/imp-kafka-mvn-01/kafka-basic-core/pom.xml
+++ b/imp-kafka-mvn-01/kafka-basic-core/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.learn.kafka</groupId>
-	<artifactId>kafka-core</artifactId>
+	<artifactId>kafka-basic-core</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>kafka-core</name>
+	<name>kafka-basic-core</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
