--- a/imp-kafka-mvn-01/kafka-producer/pom.xml
+++ b/imp-kafka-mvn-01/kafka-producer/pom.xml
@@ -44,7 +44,7 @@
 
 		<dependency>
 			<groupId>com.learn.kafka</groupId>
-			<artifactId>kafka-core</artifactId>
+			<artifactId>kafka-basic-core</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
